--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -1,61 +1,53 @@
-@font-face {
-    font-family: "pokemon";
-    src: url("../fonts/Pokemon_Solid.ttf");
+@font-face{
+    font-family: 'title';
+    src: url("../fonts/Pennstat.ttf")
 }
 .page-header{
     height: 75px;
     border: 1px solid black;
     display: inline-flex;
     width: 100%;
+    background-image: url('../img/underwater-header.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 #page_header{
     padding-bottom: 0;
     margin-top: 0;
     margin-bottom: 0;
-    background-image: url('../img/header1.jpg');
-    background-size: contain;
 }
 .head-right-wrapper{
     margin-left: auto;
 }
 .head-right{
     height: 75px;
-    width: 75px;
+    width: 125px;
     float: right;
     border-left: 1px solid black;
     padding: 10px;
     padding-top: 20px;
-    background-image: url('../img/pokeball.png');
     background-size: cover;
-    font-family: "pokemon";
-    text-shadow: 2px 1px 1px #0099ff, -2px -1px 1px #0099ff;
-    color: #ffcc00;
     text-align: center;
     font-size: 15pt;
 }
 .head-right:hover{
-    background-image: url('../img/openpokeball.png');
     background-size: cover;
 }
 .head-left-wrapper{
+    font-family: title;
     margin: auto 0;
 }
 .head-left{
-    font-family: "pokemon";
-    text-shadow: 2px 1px 1px #0099ff, -2px -1px 1px #0099ff;
-    color: #ffcc00;
     margin-top: 5px;
     float: left;
     display: flex;
     align-items: center;
 }
 .head-left h1{
-    font-family: "pokemon";
     margin: 0;
 }
 body{
     height: 600px;
-    background-image: url('../img/pikabg.jpg');
     background-size: 100% 600px;
     background-repeat: no-repeat;
 }
@@ -68,7 +60,6 @@ body{
     height: 300px;
 }
 .login h1 {
-    font-family: "pokemon";
     text-shadow: 2px 1px 1px #0099ff, -2px -1px 1px #0099ff;
     color: #ffcc00;
     text-align: center;
