--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -3,6 +3,7 @@
     src: url("../fonts/Pennstat.ttf")
 }
 .page-header{
+    font-family: title;
     height: 75px;
     border: 1px solid black;
     display: inline-flex;
@@ -10,6 +11,7 @@
     background-image: url('../img/underwater-header.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    border-bottom: 0;
 }
 #page_header{
     padding-bottom: 0;
@@ -25,20 +27,18 @@
     float: right;
     border-left: 1px solid black;
     padding: 10px;
-    padding-top: 20px;
+    padding-top: 25px;
     background-size: cover;
     text-align: center;
     font-size: 15pt;
-}
-.head-right:hover{
-    background-size: cover;
+    color: #333;
 }
 .head-left-wrapper{
-    font-family: title;
     margin: auto 0;
 }
 .head-left{
     margin-top: 5px;
+    padding-left: 10px;
     float: left;
     display: flex;
     align-items: center;
@@ -48,7 +48,8 @@
 }
 body{
     height: 600px;
-    background-size: 100% 600px;
+    background-image: url('../img/base3.jpg');
+    background-size: 100% 800px;
     background-repeat: no-repeat;
 }
 .login{
@@ -60,7 +61,8 @@ body{
     height: 300px;
 }
 .login h1 {
-    text-shadow: 2px 1px 1px #0099ff, -2px -1px 1px #0099ff;
+    font-family: title;
+    text-shadow: 2px 1px 1px #0099ff, -2px -1px 1px blue;
     color: #ffcc00;
     text-align: center;
     font-size: 34pt;
@@ -70,15 +72,15 @@ body{
 }
 input {
     width: 100%;
-    background: rgba(0,0,0,0.3);
+    background: rgba(0,0,0,0.5);
     border: none;
     outline: none;
     padding: 10px;
     font-size: 13px;
-    text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
-    border: 1px solid rgba(0,0,0,0.3);
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+    border: 1px solid rgba(0,0,0,0.5);
     border-radius: 4px;
-	box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
+	box-shadow: inset 0 -5px 45px rgba(100,100,100,0.5), 0 1px 1px rgba(255,255,255,0.5);
 }
 input#username, input#password {
     margin-bottom: 10px;
@@ -86,4 +88,5 @@ input#username, input#password {
 input#submit, input#register{
     width: 50%;
     float: left;
+    color: darkgrey;
 }
