--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -3,7 +3,7 @@
     font-family: 'title';
     src: url("../fonts/Pennstat.ttf")
 }
-.page-header{
+.navbar{
     font-family: title;
     height: 75px;
     border: 1px solid black;
@@ -15,18 +15,17 @@
     border-bottom: 0;
 }
 #page_header{
-    padding-bottom: 0;
-    margin-top: 0;
     margin-bottom: 0;
+    box-shadow: 0 0 30px blue;
 }
 .head-right-wrapper{
     margin-left: auto;
 }
 .head-right{
     height: 75px;
-    width: 125px;
+    width: 120px;
     float: right;
-    border-left: 1px solid black;
+    border-left: 1px solid rgba(0,0,0,0.2);
     padding: 10px;
     padding-top: 25px;
     background-size: cover;
