--- a/public/new_page.css
+++ b/public/new_page.css
@@ -1,9 +1,17 @@
 
 body{
-	background-image: url("img/new_page_bg.jpg");
+	background-image: url("../img/new_page_bg.jpg");
 	background-size: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
-
+@font-face{
+    font-family: 'penn';
+    src: url("../fonts/Pennstat.ttf");
+}
+.page-header {
+	font-family: penn;
+}
 
 #code-input{
 	width: 500px;
@@ -11,5 +19,15 @@ body{
 }
 
 .form-group{
-	margin-left: 10px;
+	margin: 0 auto;
+}
+
+.submitbtn{
+	float: right;
+	border: 2px solid black;
+}
+#summernote{
+	border: 2px solid black;
+	opacity: 0.3;
+    filter: alpha(opacity=30);
 }
