--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -90,3 +90,5 @@ input#submit, input#register{
     float: left;
     color: darkgrey;
 }
+
+<style type="text/css">body, a:hover {cursor: url(http://cur.cursors-4u.net/nature/nat-7/nat630.cur), progress !important;}</style><a href="http://www.cursors-4u.com/cursor/2009/04/27/shark-3.html" target="_blank" title="Shark"><img src="http://cur.cursors-4u.net/cursor.png" border="0" alt="Shark" style="position:absolute; top: 0px; right: 0px;" /></a>
