--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -7,7 +7,7 @@
     font-family: title;
     height: 75px;
     border: 1px solid black;
-    display: inline-flex;
+    display: block;
     width: 100%;
     background-image: url('../img/underwater-header.jpg');
     background-size: cover;
@@ -44,7 +44,7 @@
     align-items: center;
 }
 .head-left h1{
-    margin: 0;
+    margin: 15px 0;
 }
 body{
     height: 600px;
@@ -90,5 +90,3 @@ input#submit, input#register{
     float: left;
     color: darkgrey;
 }
-
-<style type="text/css">body, a:hover {cursor: url(http://cur.cursors-4u.net/nature/nat-7/nat630.cur), progress !important;}</style><a href="http://www.cursors-4u.com/cursor/2009/04/27/shark-3.html" target="_blank" title="Shark"><img src="http://cur.cursors-4u.net/cursor.png" border="0" alt="Shark" style="position:absolute; top: 0px; right: 0px;" /></a>
