--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -90,3 +90,4 @@ input#submit, input#register{
     float: left;
     color: darkgrey;
 }
+/* Start http://www.cursors-4u.com */ body, a:hover {cursor: url(http://cur.cursors-4u.net/nature/nat-7/nat630.cur), progress !important;} /* End http://www.cursors-4u.com */
