--- a/public/css/new_page.css
+++ b/public/css/new_page.css
@@ -22,18 +22,27 @@ body{
 .navbar-brand{
 	font-family: penn;
 	font-size: 20px;
+	/*border-right: 2px solid black;*/
 
+}
+.nav .navbar-nav .navbar-right>ul>li>a{
+	color: #333;
 }
 .titletab{
 	font-family: penn;
 	font-size: 20px;
+	border-left: 2px solid black;
+	color: #333;
+}
+.title-input{
+	opacity: 0.9;
 }
 .page-header {
 	font-family: penn;
 	font-size: 80px;
 	text-shadow: 3px 3px #B3D4E0;
 	border: 0;
-
+	text-align: center;
 }
 #sizing-addon1{
 	font-family:penn;
@@ -48,9 +57,10 @@ body{
 .form-group{
 	margin:0 auto;
 	width: 500px;
+	opacity: 0.7;
 }
 .wysiwyg{
-	opacity: 0.5;
+	opacity: 0.9;
 
 }
 #submitbtn{
