--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -82,6 +82,12 @@ input {
     border-radius: 4px;
 	box-shadow: inset 0 -5px 45px rgba(100,100,100,0.5), 0 1px 1px rgba(255,255,255,0.5);
 }
+input,select,textarea{
+    color: #CCCCCC
+}
+textarea:focus, input:focus{
+    color: #DDDDDD
+}
 input#username, input#password {
     margin-bottom: 10px;
 }
