--- a/public/css/homestyle.css
+++ b/public/css/homestyle.css
@@ -107,6 +107,11 @@ body {
 	padding-bottom: 0;
 
 }
+
+#far {
+	float: right;
+	background-image: url(../img/underwater-header.jpg);
+}
 /* Start http://www.cursors-4u.com */ body, a:hover {cursor: url(http://cur.cursors-4u.net/nature/nat-7/nat630.cur), progress !important;} /* End http://www.cursors-4u.com */
 
 
