--- a/public/css/homestyle.css
+++ b/public/css/homestyle.css
@@ -112,6 +112,11 @@ body {
 	float: right;
 	background-image: url(../img/underwater-header.jpg);
 }
+
+.report {
+	float: right;
+}
+
 /* Start http://www.cursors-4u.com */ body, a:hover {cursor: url(http://cur.cursors-4u.net/nature/nat-7/nat630.cur), progress !important;} /* End http://www.cursors-4u.com */
 
 
