--- a/public/css/homestyle.css
+++ b/public/css/homestyle.css
@@ -119,6 +119,10 @@ body {
 	height: 25px;
 }
 
+.glyphicon-thumbs-up{
+	font-size: 25px;
+}
+
 /* Start http://www.cursors-4u.com */ body, a:hover {cursor: url(http://cur.cursors-4u.net/nature/nat-7/nat630.cur), progress !important;} /* End http://www.cursors-4u.com */
 
 
