--- a/public/css/homestyle.css
+++ b/public/css/homestyle.css
@@ -84,6 +84,7 @@ body {
 	background-image: url(../img/submarinebase.jpeg);
 	background-size: cover;
 	background-repeat: no-repeat;
+    padding-bottom: 100px;
 }
 
 .check {
@@ -121,6 +122,9 @@ body {
 
 .glyphicon-thumbs-up{
 	font-size: 25px;
+}
+.glyphicon-alert{
+    font-size: 25px;
 }
 
 /* Start http://www.cursors-4u.com */ body, a:hover {cursor: url(http://cur.cursors-4u.net/nature/nat-7/nat630.cur), progress !important;} /* End http://www.cursors-4u.com */
