--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -82,11 +82,11 @@ input {
     border-radius: 4px;
 	box-shadow: inset 0 -5px 45px rgba(100,100,100,0.5), 0 1px 1px rgba(255,255,255,0.5);
 }
-input,select,textarea{
-    color: #CCCCCC
+input[type=text]{
+    color: #AAAAAA;
 }
-textarea:focus, input:focus{
-    color: #DDDDDD
+input[type=text]:focus {
+    color: #CCCCCC;
 }
 input#username, input#password {
     margin-bottom: 10px;
@@ -96,4 +96,6 @@ input#submit, input#register{
     float: left;
     color: darkgrey;
 }
-/* Start http://www.cursors-4u.com */ body, a:hover {cursor: url(http://cur.cursors-4u.net/nature/nat-7/nat630.cur), progress !important;} /* End http://www.cursors-4u.com */
+body, a:hover {
+cursor: url(http://cur.cursors-4u.net/nature/nat-7/nat630.cur), progress !important;
+}
