--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -1,7 +1,12 @@
-/* TODO: restyle the page header to be a navbar */
 @font-face{
     font-family: 'title';
     src: url("../fonts/Pennstat.ttf")
+}
+body{
+    height: 600px;
+    background-image: url('../img/base3.jpg');
+    background-size: 100% 800px;
+    background-repeat: no-repeat;
 }
 .navbar{
     font-family: title;
@@ -46,12 +51,8 @@
 .head-left h1{
     margin: 15px 0;
 }
-body{
-    height: 600px;
-    background-image: url('../img/base3.jpg');
-    background-size: 100% 800px;
-    background-repeat: no-repeat;
-}
+
+/* BEGIN login area */
 .login{
     position: relative;
     top: 40%;
@@ -70,6 +71,9 @@ body{
     text-align: center;
     margin-bottom: 20px;
 }
+/* END login area */
+
+/* BEGIN input styling */
 input {
     width: 100%;
     background: rgba(0,0,0,0.5);
