--- a/public/css/homestyle.css
+++ b/public/css/homestyle.css
@@ -80,7 +80,6 @@
 	box-shadow: inset 0 -5px 45px rgba(100,100,100,0.5), 0 1px 1px rgba(255,255,255,0.5);
 	border-radius: 4px;
 	opacity: .9;
-    margin-top: 30px;
     height: 340px;
     overflow: hidden;
     overflow-y: scroll;
@@ -102,8 +101,10 @@ body {
     padding-bottom: 100px;
 }
 
-.check {
+.report, .vote, .votenumber {
 	float: right;
+    height: 40px;
+    padding-top: 5px;
 }
 
 .ex {
@@ -131,8 +132,8 @@ body {
 #likevalue {
 	border: 1px solid black;
 	width: 25px;
+    padding-top: 9px;
 	text-align: center;
-	height: 25px;
 }
 
 .glyphicon-thumbs-up{
@@ -150,6 +151,7 @@ body {
     width: 100px;
     height: 100px;
     margin: 0px 10px 10px 0px;
+    margin-left: 50px;
     padding: 20px 20px 20px;
     border-radius: 5px;
     text-align: center;
