--- a/public/css/new_page.css
+++ b/public/css/new_page.css
@@ -18,13 +18,17 @@ body{
 	/*padding-top: 25px;*/
 	border: 0;
 	box-shadow: 0 0 30px blue;
+    height: 75px;
 }
 
 .navbar-brand{
-	font-family: penn;
-	font-size: 20px;
-	/*border-right: 2px solid black;*/
-
+    height: 75px;
+    padding: 0;
+}
+.logo{
+    height: 75px;
+    width: 75px;
+	border-right: 2px solid black;
 }
 .navbar-default .nav-brand{
     color: #333;
@@ -35,15 +39,19 @@ body{
 .navbar-default .navbar-nav>li>a{
 	color: #333;
 }
-/* END navbar styling */
-
-/* BEGIN title */
 .titletab{
 	font-family: penn;
 	font-size: 20px;
 	border-left: 2px solid black;
 	color: #333;
+    height: 75px;
 }
+li>a.titletab{
+    padding-top: 28px;
+}
+/* END navbar styling */
+
+/* BEGIN title */
 .title-input{
 	opacity: 0.9;
 }
