small edits new page.html

--- a/public/css/new_page.css
+++ b/public/css/new_page.css
@@ -67,8 +67,7 @@ li>a.titletab{
 
 /* BEGIN input field styling */
 #sizing-addon1{
-	font-family:penn;
-	font-size: 15px;
+	background-image: url(../img/logo_300x300.png);
 }
 
 #code-input{
