--- a/public/css/new_page.css
+++ b/public/css/new_page.css
@@ -51,6 +51,10 @@ li>a.titletab{
 }
 /* END navbar styling */
 
+.toggle-switches {
+    float: left;
+    margin-left: 10px;
+}
 /* BEGIN title */
 .title-input{
 	opacity: 0.9;
