--- a/public/css/creators.css
+++ b/public/css/creators.css
@@ -1,7 +1,27 @@
 body{
 margin: 0;
 overflow: hidden;
-background: #000;
+background-image: url('../img/creators.jpg');
+background-size: cover;
+background-position: 0 -250px;
+}
+.credits {
+    margin: 0 auto;
+    width: 400px;
+    height: 500px;
+    margin-top: 50px;
+    text-align: center;
+    color: rgb(19,186,255);
+    text-shadow: 2px 2px #333;
+}
+h1 {
+    font-size: 40pt;
+}
+h2 {
+    font-size: 30pt;
+}
+h4 {
+    font-size: 20pt;
 }
 
 i{
