--- a/public/css/new_page.css
+++ b/public/css/new_page.css
@@ -38,6 +38,10 @@ body{
 	color: #333;
     padding-top: 30px;
 }
+.navbar-right{
+	width: 300px;
+	height: 75px;
+}
 /* END navbar styling */
 .logo {
     height: 75px;
