--- a/public/css/new_page.css
+++ b/public/css/new_page.css
@@ -28,6 +28,9 @@ body{
     padding: 0;
 
 }
+div.container-fluid {
+    padding: 0;
+}
 .navbar-default .nav-brand{
     color: #333;
 }
@@ -39,13 +42,14 @@ body{
     padding-top: 30px;
 }
 .navbar-right{
-	width: 300px;
+	width: 255px;
 	height: 75px;
 }
 /* END navbar styling */
 .logo {
     height: 75px;
     width: 75px;
+    margin-left: 15px;
 }
 /* BEGIN title */
 .titletab{
